# FSeam

./: .gitignore  .travis.yml  CMakeLists.txt  FSeamConfig.cmake.in  LICENSE  README.md  flake.nix  fseam-recipee.nix  py.requirements.txt
FSeam/: FSeam.hpp  MockVerifier.hpp  Versioner.hh.in
FSeam/FSeam/: FSeam.hpp
FSeamGenerator/: CppHeaderParser.py  FSeamerFile.py  SampleClass.hh  __init__.py
Generator/: CppHeaderParser.py  FSeamerFile.py  SampleClass.hh  __init__.py
Generator/FSeamGenerator/: CppHeaderParser.py  FSeamerFile.py  SampleClass.hh
cmake/: FSeamModule.cmake
doc/: README.md  loggin.md  usage.md  why-fseam.md
docs/: README.md  cheat-sheet.md  contributing.md  free-functions.md  future.md  limitations.md  logging.md  testing.md  usage.md  why-fseam.md
test/: CMakeLists.txt  FSeamBasicMockTestCase.cpp  FSeamBasicTestCase.cpp  FSeamClassWithConstructorTestCase.cpp  FSeamDefaultMockTestCase.cpp  FSeamFreeFunctionTestCase.cpp  FSeamGeneratedHelperUsageTestCase.cpp  FSeamPureVirtualTestCase.cpp  FSeamSingletonTestCase.cpp  testMain.cpp
test/src/: AbstractClass.hh  ArgsStruct.hh  ClassWithConstructor.cpp  ClassWithConstructor.hh  DependencyGettable.cpp  DependencyGettable.hh  DependencyNonGettable.cpp  DependencyNonGettable.hh  EmptyClassTest.hh  FreeFunctionClass.cpp  FreeFunctionClass.hh  TestingClass.cpp  TestingClass.hh
